# python-vslam

./: .gitignore  README.md  claude.md  pyproject.toml
.claude/agents/: code-simplifier.md  python-test-creator.md  readme-updater.md
examples/: imu_demo.py  slam_demo.py  slam_with_loop_closure.py  stereo_demo.py  vo_demo.py
scripts/: train_vocabulary.py
src/vslam/: __init__.py  dataset_reader.py  slam_system.py
src/vslam/backend/: __init__.py  backend_process.py  covisibility.py  keyframe.py  local_mapping.py  messages.py
src/vslam/backend/optimizer/: __init__.py  scipy_ba.py
src/vslam/frontend/: __init__.py  imu_integrator.py  imu_odometry.py  map_point.py  motion_estimator.py  pose.py  stereo_camera.py  stereo_frontend.py  visual_odometry.py
src/vslam/frontend/vo/: __init__.py  feature_detector.py  motion_estimator.py  stereo_frontend.py  stereo_matcher.py  temporal_matcher.py  track.py  visual_odometry.py
src/vslam/io/: __init__.py  ground_truth.py  imu_reader.py
src/vslam/loop_closure/: __init__.py  geometric_verification.py  loop_closure_process.py  loop_detector.py  messages.py  place_recognition.py  pose_graph.py  vocabulary.py
src/vslam/visualization/: __init__.py  rerun_visualizer.py
tests/: test_dataset_reader.py
